--- a/gb/25/1/31/n14426716.md
+++ b/gb/25/1/31/n14426716.md
@@ -14,9 +14,10 @@
 <p>除手机外，华为电动汽车鸿蒙智行问界M9也出现在央视春晚重庆分会场展示灯光秀。据陆媒报导，从2019年开始，华为产品就已经获得央视春晚的热捧。</p>
 <p>不过，据网上流传的视频和照片显示，央视台面上热捧国产货，台下却热衷于外国货。</p>
 <p>在央视2025年春晚中，香港歌手陈奕迅与张雨霏等运动员合唱《孤勇者》时，有细心网友发现，陈奕迅打击乐器的左右两边摆放着两台笔记本电脑皆是苹果（Apple）品牌。</p>
-<p><center><a title="在2025央视春晚上，华为多款手机频繁出现在春晚节目中。有网友发现，香港歌手陈奕迅与运动员合唱《孤勇者》时，舞台上摆放着两台笔记本电脑却是苹果品牌。但是从陈奕迅的正面观看，苹果电脑Logo被有意遮挡，该网友认为“原因只是没有广告费”。" src=""></a><a href="https://d8jw662akk94j.cloudfront.net/A9t3YQmss"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hd10t0sids5nRS2b10oeUPPj1vc1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>该网友表示，可以看到左边MacOS（苹果操作系统）的Dock栏和右边Mac的Touch Bar，两台苹果电脑使用的程序是Serato DJ Pro（日本公司AlphaTheta拥有的音乐演奏软件）和Ableton Live（德国公司Ableton开发的数字音频工作站软件）。</p>
+<figure id="attachment_14426801" aria-describedby="caption-attachment-14426801" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14426801-92dcff9f3bbdbc35c2193c2d45161bcd-e1738371000739.jpg"><img decoding="async" class="size-full wp-image-14426801" src="https://i.epochtimes.com/assets/uploads/2025/02/id14426801-92dcff9f3bbdbc35c2193c2d45161bcd-e1738371000739.jpg" alt="" width="600" b="545" /></a><figcaption id="caption-attachment-14426801" class="wp-caption-text">（视频截图/合成图）</figcaption></figure>
+<p>该网友表示，可以看到左边MacOS（苹果操作系统）的Dock栏和右边Mac的Touch Bar，两台苹果电脑使用的程序是Serato DJ pro（日本公司AlphaTheta拥有的音乐演奏软件）和Ableton Live（德国公司Ableton开发的数字音频工作站软件）。</p>
 <p>从陈奕迅的正面观看，苹果电脑标志（Logo）被央视有意遮挡，该网友认为“原因只是没有广告费”。“所以问题来了，华为在春晚做了很多的广告，华为不是遥遥领先吗？为什么（央视）不用金主华为的呢？”网友说。</p>
-<p>讽刺的是，在央视春晚结束后的第二天，有网友发现，央视主持人尼格买提在微博账号发布一组照片（共9张），除了他与央视主持人、演员合影之外，其中一张合影是尼格买提等多人各持一部苹果手机拍照，而刚刚过去的央视春晚推崇的手机品牌却是华为。</p>
+<p><center><a title="在2025央视春晚上，华为多款手机频繁出现在春晚节目中。有网友发现，香港歌手陈奕迅与运动员合唱《孤勇者》时，舞台上摆放着两台笔记本电脑却是苹果品牌。但是从陈奕迅的正面观看，苹果电脑Logo被有意遮挡，该网友认为“原因只是没有广告费”。" loading="lazy" data2-src=""></a><a href="https://dlvlk7o3qgp9v.cloudfront.net/D4r3YQmsu"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hd10t0sids5nRS2b10oeUPPj1vc1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>讽刺的是，在央视春晚结束后的第二天，有网友发现，央视主持人尼格买提在微博账号发布一组照片（共9张），除了他与央视主持人、演员合影之外，其中一张合影是尼格买提等多人各持一部苹果手机拍照，而刚刚过去的央视春晚推崇的手机品牌却是华为。</p>
 <figure id="attachment_14426738" aria-describedby="caption-attachment-14426738" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14426738-a9d1f8f69522a3d5103185e50ac2d28d-e1738362067681.jpg"><img decoding="async" class=" wp-image-14426738" src="https://i.epochtimes.com/assets/uploads/2025/02/id14426738-a9d1f8f69522a3d5103185e50ac2d28d-e1738362067681.jpg" alt="" width="450" b="547" /></a><figcaption id="caption-attachment-14426738" class="wp-caption-text">（网页截图）</figcaption></figure>
 <p>此事引发网民关注和热议。有网友发现，1月31日21:26，尼格买提将涉及苹果手机的那张有争议的照片删除了，此时这组合照还有8张照片。仅仅过了12分钟，尼格买提又补充一张照片，是其手持华为手机与其他央视主持人的合影。</p>
 <figure id="attachment_14426742" aria-describedby="caption-attachment-14426742" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14426742-27d187397fab4086c19674c4301a363b-e1738362607527.jpg"><img decoding="async" class=" wp-image-14426742" src="https://i.epochtimes.com/assets/uploads/2025/02/id14426742-27d187397fab4086c19674c4301a363b-e1738362607527.jpg" alt="" width="450" b="761" /></a><figcaption id="caption-attachment-14426742" class="wp-caption-text">（网页截图／合成图）</figcaption></figure>
@@ -24,43 +25,47 @@
 <p>有网友说：“春晚植入了那么多次华为手机，后台是Vivo全程直播，观众席的桌子上放着小米车模，结果发现都是假的，舞台上的都是苹果用户！这就是现实。”</p>
 <p>实际上，不仅央视内部人员放弃华为而使用苹果手机，早在2019年第一天，华为官方X（推特）账号就曾使用苹果手机发布了新年祝福。事发后，华为官方发声明解释称：因为VPN网络问题，无法用电脑发文，故而使用苹果手机。（<strong>延伸阅读：<span style="color: #0000ff;"><a style="color: #0000ff;" href="https://github.com/1992513/djy/blob/master/gb/19/1/3/n10951671.md#1" target="_blank" rel="noopener">用iPhone发推成事故 华为内部处罚再惹议</a></span></strong>）</p>
 <p>责任编辑：孙芸#</p>
-<h3>推荐阅读</h3>
-<h3><span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14425178.md#1" target="_blank" rel="noopener">央视春晚机器人表演“失误” 引发网民嘲讽</a><br />
-<span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/4/17/n13713967.md#1" target="_blank" rel="noopener">上海千家超市恢复营业？央视新闻被指造假</a><br />
-<span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/2/11/n13571237.md#1" target="_blank" rel="noopener">“八孩妈”再落虎口？央视探访引疑虑</a><br />
-<span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14326112.md#1" target="_blank" rel="noopener">央视宣传盘锦稻田蟹涉假 千万粉丝网红曝内情</a> </span></span></span></span></h3>
-	
+<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14425178.md#1" target="_blank" rel="noopener">央视春晚机器人表演“失误” 引发网民嘲讽</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424273.md#1" target="_blank" rel="noopener">央视春晚主持人妆容大翻车 撒贝宁浓眉遭吐槽</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14425139.md#1" target="_blank" rel="noopener">机器人春晚扭秧歌“露馅” 退场时脚步直哆嗦</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14326112.md#1" target="_blank" rel="noopener">央视宣传盘锦稻田蟹涉假 千万粉丝网红曝内情</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/4/17/n13713967.md#1" target="_blank" rel="noopener">上海千家超市恢复营业？央视新闻被指造假</a></span></li>
+</ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388514.md#1">加州野火迅速蔓延 迫使马里布居民撤离</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388582.md#1">野火迅速蔓延 南加州发布“红色警告”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14408389.md#1">破坏性风暴袭南加州 熊熊野火再次延烧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14409296.md#1">野火肆虐烧到家门口 南加州华人彻夜未眠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/13/n14180329.md#1">央视体育节目删梅西画面 替换的球星曾抨击中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274774.md#1">央视拍完照 救灾就停 福建灾民：政府太过分</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/24/n14337232.md#1">央视称遭国军网攻 台防长斥中共是头号黑客</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424273.md#1">央视春晚主持人妆容大翻车 撒贝宁浓眉遭吐槽</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/15/n9844557.md#1" target="_blank">毛泽东诗词“蔑视祖宗 自认风流”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md#1" target="_blank">出版24年 42种语言 拥有全球读者的转法轮</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/22/n9758393.md#1" target="_blank">刘晓：中共吹捧的商鞅非良臣 创万世恶法</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/27/n10431591.md#1" target="_blank">澳洲女子的神奇“减肥”经历  5个月70斤</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418840.md#1">整个时代映现于她一身：无名女子们的肖像</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/5/n14174106.md#1">围炉过年：从除夕到元日的民俗守护人心中的善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406436.md#1">古代的中国人是如何过年的？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/27/n14422898.md#1">【未解之谜】2025预言盘点——加州大火深度解析</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421709.md#1">【未解之谜】皮行者牧场（二）：神秘的隐形人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14425072.md#1">【环球直击】美国土安全部部长赴纽约逮捕非法移民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14425201.md#1">【佳音时刻】盗用 准确率低 DeepSeek被打脸</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/30/n14425917.md#1">【百年真相】揭秘：云南头号恶霸死刑不死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424310.md#1">你不知道的凡士林七个美容妙招 省钱又适用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14424587.md#1">中国民风大变 过年城里乡村都冷清</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424287.md#1">达里奥警告：AI投资重演25年前股市泡沫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424024.md#1">《超人》预告片场景太假 导演冈恩回应100%真实</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14425139.md#1">机器人春晚扭秧歌“露馅” 退场时脚步直哆嗦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424328.md#1">小三通重开 小红书网民相约赴台看大陆禁片</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/30/n14425947.md#1">春晚后台与机器人互动 魔术师刘谦被“碰瓷”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422307.md#1">研究人员在饮用水中发现未知化学物质</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424136.md#1">情境意识：你意想不到的重要生活技能</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/30/n14425903.md#1">美国房价与房贷利率何时回落？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14423713.md#1">冻龄抗癌抗抑郁 跳舞让人彻底摆脱抗癫痫药</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14424469.md#1">按摩三个膝关节穴位 有助于解决膝盖的疼痛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/31/n14426716.htm">央视春晚被爆掩盖苹果Logo 主持人删iPhone合影</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426716.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
